changement url photo 1

--- a/_posts/2013-12-30-Lush.md
+++ b/_posts/2013-12-30-Lush.md
@@ -11,7 +11,7 @@ Lush est un magasin de cosmétiques qui va pouvoir combler les attentes de beauc
 - Trouver des cosmétiques végans ! C'est à dire, non testé sur les animaux, et sans ingrédients qui en seraient issus.
 - Acheter des cosmétiques en vrac, à la coupe, en dur et sans emballage ! (Allez-y avec vos propres emballages, ou réutillisez les boites qu'ils vendent.)
 
-![Lush](http://i57.servimg.com/u/f57/14/13/54/94/lush-110.jpg)
+![Lush](http://{{ site.url }}/Photos-articles/Lush-1.jpg)
 
 Si vous êtes dans une démarche Zéro-Déchets, Lush peut vous sauver la mise ! Le magasin est déjà dans une démarche de réduction des déchets très avancé, il ne vous restera plus qu'à refuser l'emballage papier et le ticket de caisse pour repartir seulement avec vos cosmétiques ! On y trouve de nombreux cosmétiques en vrac :
 
