corererererection url tof 1

--- a/_posts/2013-12-30-Lush.md
+++ b/_posts/2013-12-30-Lush.md
@@ -11,7 +11,7 @@ Lush est un magasin de cosmétiques qui va pouvoir combler les attentes de beauc
 - Trouver des cosmétiques végans ! C'est à dire, non testé sur les animaux, et sans ingrédients qui en seraient issus.
 - Acheter des cosmétiques en vrac, à la coupe, en dur et sans emballage ! (Allez-y avec vos propres emballages, ou réutillisez les boites qu'ils vendent.)
 
-![Lush](http://{{ site.url }}/Photos-articles/Lush-1.jpg)
+![Lush]({{ site.url }}/Photos-articles/Lush-1.jpg)
 
 Si vous êtes dans une démarche Zéro-Déchets, Lush peut vous sauver la mise ! Le magasin est déjà dans une démarche de réduction des déchets très avancé, il ne vous restera plus qu'à refuser l'emballage papier et le ticket de caisse pour repartir seulement avec vos cosmétiques ! On y trouve de nombreux cosmétiques en vrac :
 
@@ -28,7 +28,7 @@ Les moins de Lush :
 - Malgré une utilisation très limité en produits non naturels, on trouve tout de même des ingrédients synthétiques dans certains de leurs cosmétiques. Mais il faut être honnête, retournez votre gel douche ou shampoing puis comparer la liste des ingrédients avec celle d'un produit de Lush, la différence est flagrante, les cosmétiques Lush sont bien plus simples et bien moins chimiques !
 - Des ingrédients qui viennent de loin ! Dans certains cosmétiques on trouve des ingrédients qu'on ne peut pas dire très très locaux, et bien que Lush garantisse pour la plupart qu'ils soient issus du commerce équitable, les tranquilousains jusque boutiste au niveau agriculture bio et locale devront passer leur chemin !
 - A notre connaissance, les produits sont faits mains en Angleterre... niveau produits locaux, on repassera!
-- Pour vraiment chercher la petite bête : une chose nous a surpris lors de nos visites à Lush Toulouse : dans le magasin nous n'y avons toujours vu que des vendeuses-femmes. Nous ignorons si c'est parce que seules des femmes postulent ou si c'est une politique du magasin, cosmétique = femme ? 
+- Pour vraiment chercher la petite bête : une chose nous a surpris lors de nos visites à Lush Toulouse : dans le magasin nous n'y avons toujours vu que des vendeuses-femmes. Nous ignorons si c'est parce que seules des femmes postulent ou si c'est une politique du magasin, cosmétique = femme ?
 
 
 Les plus de Lush :
@@ -40,8 +40,8 @@ Les plus de Lush :
 - La transparence ! Lush semble essayer d'être le plus transparent possible, ainsi sur leur site vous pouvez trouver la liste détaillé des ingrédients de chaque cosmétique, et bien souvent des pages explicatives à leurs propos. On ne peut que féliciter cette démarche !
 
 
-Où trouver Lush à Toulouse ?  
-   15, rue Saint Antoine du T   
+Où trouver Lush à Toulouse ?
+   15, rue Saint Antoine du T
    31000 Toulouse
 
 Leur site internet : [www.lush.fr](https://www.lush.fr)
